unpackaged/main/default/objects/InvolvedStakeholder__c/InvolvedStakeholder__c.object-meta.xml
<CustomObject>
    <label>Fonction partenaire</label>
    <nameField>
        <displayFormat>IS-{0000}</displayFormat>
        <label>Numéro Partie impliquée</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fonctions partenaires</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>