unpackaged/main/default/objects/InvolvedStakeholder__c/fields/BP_Conforme__c.field-meta.xml
<CustomField>
    <fullName>BP_Conforme__c</fullName>
    <description>True si conforme</description>
    <formula>if
(
AND
(
InvolvedAccount__r.Check_Ligne1__c ,
InvolvedAccount__r.Check_Ligne2__c ,
InvolvedAccount__r.Check_Ligne3__c ,
InvolvedAccount__r.Check_Name__c ,
InvolvedAccount__r.Check_TypeIdentifiantNational__c ,
InvolvedAccount__r.Check_Ville__c ,
InvolvedAccount__r.Check_CodePostal__c
)
,
true
,
false
)</formula>
    <label>BP Conforme</label>
    <type>Checkbox</type>
</CustomField>