unpackaged/main/default/objects/InvolvedStakeholder__c/fields/BP_Conforme_checkbox__c.field-meta.xml
<CustomField>
    <fullName>BP_Conforme_checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Utilisé dans rollup sur opp</description>
    <label>BP Conforme</label>
    <type>Checkbox</type>
</CustomField>