unpackaged/main/default/objects/InvolvedStakeholder__c/fields/BP_NonConfome__c.field-meta.xml
<CustomField>
    <fullName>BP_NonConfome__c</fullName>
    <formula>if
(
Format__c &lt;&gt; &quot;Conforme&quot;,1,0
)</formula>
    <label>BP_NonConfome</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>