unpackaged/main/default/objects/InvolvedStakeholder__c/fields/Check_AccountOK__c.field-meta.xml
<CustomField>
    <fullName>Check_AccountOK__c</fullName>
    <formula>IF(AND( 
        LEN(InvolvedAccount__r.BillingStreet) &lt;= 60,
        LEN(InvolvedAccount__r.BillingPostalCode) &lt;= 10,
        LEN(InvolvedAccount__r.BillingCity) &lt;= 40,
        LEN(Name) &lt;= 40,
        LEN(TEXT(InvolvedAccount__r.TypeIdentifiantNational__c)) &lt;= 80
      ), true, false
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Compte OK</label>
    <type>Checkbox</type>
</CustomField>