unpackaged/main/default/objects/InvolvedStakeholder__c/fields/Conforme__c.field-meta.xml
<CustomField>
    <fullName>Conforme__c</fullName>
    <formula>if
(
Format__c = &#39;Conforme&#39;
,
IMAGE(&#39;/resource/1717420642000/Icon_Green?&#39;, &#39;Green&#39;, 24,24)
,
IMAGE(&#39;/resource/1717420642000/Icon_Red?&#39;, &#39;Red&#39;, 24,24)
)</formula>
    <label>Conforme</label>
    <type>Text</type>
</CustomField>