unpackaged/main/default/objects/InvolvedStakeholder__c/fields/DUNS__c.field-meta.xml
<CustomField>
    <fullName>DUNS__c</fullName>
    <formula>InvolvedAccount__r.DB_DUNS_Number__c</formula>
    <label>N° DUNS</label>
    <type>Text</type>
</CustomField>