unpackaged/main/default/objects/InvolvedStakeholder__c/fields/Format__c.field-meta.xml
<CustomField>
    <fullName>Format__c</fullName>
    <formula>if
(
 AND
(
InvolvedAccount__r.Check_Ligne1__c ,
InvolvedAccount__r.Check_Ligne2__c ,
InvolvedAccount__r.Check_Ligne3__c ,
InvolvedAccount__r.Check_Name__c ,
InvolvedAccount__r.Check_TypeIdentifiantNational__c ,
InvolvedAccount__r.Check_Ville__c ,
InvolvedAccount__r.Check_CodePostal__c 
)
,
&#39;Conforme&#39;
,
&#39;Non conforme&#39;
)</formula>
    <label>Format</label>
    <type>Text</type>
</CustomField>