unpackaged/main/default/objects/InvolvedStakeholder__c/fields/InvolvedAccount__c.field-meta.xml
<CustomField>
    <fullName>InvolvedAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partenaire</label>
    <lookupFilter>
        <active>false</active>
        <booleanFilter>(1 AND 2) OR (3 AND 4)</booleanFilter>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Prospect, Client, Particulier (B2C)</value>
        </filterItems>
        <filterItems>
            <field>$Source.Role__c</field>
            <operation>equals</operation>
            <value>Donneur d’ordre, Facturé, Payeur, PV</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Site</value>
        </filterItems>
        <filterItems>
            <field>$Source.Role__c</field>
            <operation>equals</operation>
            <value>Livré</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Fonctions partenaires</relationshipLabel>
    <relationshipName>Parties_impliquees_Partner</relationshipName>
    <type>Lookup</type>
</CustomField>