unpackaged/main/default/objects/InvolvedStakeholder__c/fields/ordre_fonction__c.field-meta.xml
<CustomField>
    <fullName>ordre_fonction__c</fullName>
    <description>Défini l&#39;ordre d&#39;affichage sur la related list des opportunités</description>
    <formula>IF(ISPICKVAL(Role__c, &#39;Payeur&#39;), 1,
IF(CONTAINS(TEXT(Role__c),&#39;Donneur&#39;), 2,
IF(ISPICKVAL(Role__c, &#39;Facturé&#39;), 3,
IF(ISPICKVAL(Role__c, &#39;Livré&#39;), 4,
IF(ISPICKVAL(Role__c, &#39;PV&#39;), 5, null)
)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>#</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>