unpackaged/main/default/objects/InvolvedStakeholder__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Fonction partenaire</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Donneur d’ordre</fullName>
            </value>
            <value>
                <fullName>Facturé</fullName>
            </value>
            <value>
                <fullName>Livré</fullName>
                <default>true</default>
                <label>Livré</label>
            </value>
            <value>
                <fullName>Payeur</fullName>
            </value>
            <value>
                <fullName>PV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>