unpackaged/main/default/objects/InvolvedStakeholder__c/fields/SAP_Id__c.field-meta.xml
<CustomField>
    <fullName>SAP_Id__c</fullName>
    <formula>if (Contact_B2C__c&lt;&gt;null, Contact_B2C__r.SAP_ID__c  ,InvolvedAccount__r.Tech_SAP_Id__c)</formula>
    <label>SAP Id</label>
    <type>Text</type>
</CustomField>