unpackaged/main/default/objects/InvolvedStakeholder__c/validationRules/VR03_noUpdateOnRole.validationRule-meta.xml
<ValidationRule>
    <fullName>VR03_noUpdateOnRole</fullName>
    <active>true</active>
    <description>Vous ne pouvez pas modifier le rôle de la fonction partenaire</description>
    <errorConditionFormula>AND(
!$Setup.Bypass__c.BypassValidationRules__c,
NOT(ISPICKVAL(Role__c, &#39;Livré&#39;)),
ischanged(Role__c)
)</errorConditionFormula>
    <errorMessage>Vous ne pouvez pas modifier le rôle de la fonction partenaire</errorMessage>
</ValidationRule>